<resources>
    <string name="app_name">SimulateTest</string>

    <string name="auto_test">Auto Test</string>
    <string name="initial">Initial (adb shell)</string>
    <string name="enable_test">Enable Test</string>
    <string name="disable_test">Disable Test</string>
    <string name="set_isdm_value">Set ISDM</string>
    <string name="set_at_value">Analog data(AT)</string>
    <string name="update_sim">Update SIM</string>
    <string name="update_ui">Update UI</string>

    <string name="set_isdm_text">Isdm:</string>
    <string name="set_value_text">Value:</string>
    <string name="action_save">save</string>
    <string name="title">Title: </string>
    <string name="isdm">ISDM: </string>
    <string name="at">AT: </string>
    <string name="RecordType">RecordType:</string>
    <string name="refreshui">RefreshUI:</string>
    <string name="resume">Resume</string>

    <array name="record_types">
        <item>spn</item>
        <item>imsi</item>
        <item>spdi</item>
        <item>pnn</item>
        <item>opl</item>
        <item>lons</item>
        <item>sons</item>
    </array>
    <string name="title_activity_sdmconfig">SDMConfigActivity</string>
    <string name="action_settings">Settings</string>
    <string name="input_sdmid">Input SDMID</string>
    <string name="isdm_id">SDMID: </string>
    <string name="value">VALUE:</string>
    <string name="input_value">Input Value</string>
    <string name="clear">CLEAR</string>
    <string name="save">SAVE</string>
    <string name="clear_all">CLEAR ALL</string>
    <string name="add">add</string>

</resources>
