<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_margin="10dp"
    android:orientation="horizontal">

    <LinearLayout
        android:layout_width="0dp"
        android:layout_weight="8"
        android:id="@+id/ll_item"
        android:layout_height="wrap_content"
        android:orientation="vertical">


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:gravity="center"
                android:text="@string/isdm_id"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/tv_isdm_config"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:completionThreshold="2"
                android:hint="@string/input_sdmid" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:gravity="center"
                android:text="@string/value"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/tv_isdm_config_value"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/input_value" />
        </LinearLayout>
    </LinearLayout>
    <LinearLayout
        android:layout_width="0dp"
        android:layout_weight="1"
        android:id="@+id/ll_delete"
        android:layout_height="match_parent">
        <ImageView
            android:layout_width="30dp"
            android:layout_gravity="center"
            android:src="@android:drawable/ic_delete"
            android:layout_height="match_parent" />
        <TextView
            android:id="@+id/tv_delete_isdm"
            android:layout_width="wrap_content"
            android:visibility="gone"
            android:layout_height="match_parent" />
    </LinearLayout>
</LinearLayout>