<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_margin="10dp"
    android:background="#cccccc"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:id="@+id/id"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:visibility="gone" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:text="@string/title"
                    android:textSize="20sp"
                    android:textStyle="bold" />

                <TextView

                    android:id="@+id/title"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="title"
                    android:textSize="20sp" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:text="@string/isdm"
                    android:textStyle="bold" />


                <TextView
                    android:id="@+id/isdm"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="Description" />
            </LinearLayout>


            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:text="@string/at"
                    android:textStyle="bold" />


                <TextView
                    android:id="@+id/atResponse"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="fsdfsdsdgzzzzzzzzzzzzzzzzzzzzzzzzzzzzzzzzzz" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:text="@string/RecordType"
                    android:textStyle="bold" />


                <TextView
                    android:id="@+id/refreshRecordtype"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="zzzzzzzzzzzzzzzzzzzzzz" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:text="@string/refreshui"
                    android:textStyle="bold" />


                <TextView
                    android:id="@+id/refreshUi"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="true" />
            </LinearLayout>
        </LinearLayout>
    </LinearLayout>
</LinearLayout>